--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="header">
             <h1 class="logo">Time<span>Flow</span></h1>
-            <p class="tagline">Precision time tracking</p>
+            <p class="tagline">Precision Time Tracking</p>
         </div>
 
         <div class="stopwatch-card">
@@ -48,10 +48,11 @@
         </div>
 
         <div class="footer">
-            <p>Made with <i class="fas fa-heart"></i> by Kaushal</p>
+            <p>Made with <i class="fas fa-heart"></i> by <a href="https://www.linkedin.com/in/kaushalprazapati/">Kaushal</a></p>
         </div>
     </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
